Stop overflow in display

--- a/generator/display/beetle.css
+++ b/generator/display/beetle.css
@@ -6,9 +6,9 @@
 body, html{
     width: 100%;
     height: 100%;
-    overflow:hidden;
     margin: 0;
-    padding: 0
+    padding: 0;
+    overflow: hidden;
 }
 
 #beetle{
@@ -20,14 +20,12 @@ body, html{
     background-size:cover;
 }
 
-
 #beetleimg{
     height: 80%;
-    width: 30%;
+    width: 40%
     display: flex;
     justify-content: space-around;
     align-items: center;
-    padding-left: 7%;
 }
 
 #beetlecanvas{
@@ -37,18 +35,19 @@ body, html{
 
 #text{
     height: 80%;
-    width: 50%;
+    width: 40%;
     display: flex;
     justify-content: space-around;
     align-items: center;
-    padding: 5%;
-    
 }
 
-p{
+p {
     font-family: Bleeptrack;
     font-weight: bold;
-    font-size: 800%;
+    font-size: 600%;
     text-outline: 3px 3px #000;
-    
+}
+
+.p5Canvas {
+    display: none;
 }
